# SV-NBA__Analysis

./: .editorconfig  .flake8  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  tools.yml
data/assets/: scaled_cleaned_extended_test_df.parquet  scaled_cleaned_extended_validate_df.parquet
playground/: cluster.ipynb  downsampling.ipynb  features_selection_ica.ipynb  features_selection_mlp.ipynb  features_selection_mlp.py  features_selection_pca.ipynb  features_selection_pca.py  features_selection_pca_with_kmeans.py  features_selection_vtm.ipynb  features_selection_vtm.py  preprocess.ipynb  train_dae.ipynb
src/: __init__.py  cluster.py  feature_select.py  load.py  models.py  pickle_data.py  plot.py  scaler.py  train.py  traj_dataloader.py
